# social_media_backend

./: .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs  main.rs
src/api/: mod.rs  router.rs
src/app/: mod.rs
src/app/commands/: create_user_command.rs
src/app/queries/: get_user_query.rs
src/domain/models/: user.rs
src/infra/db_context/: mod.rs  postgres_context.rs
src/infra/repositories/: user_repository.rs
