[package]
name = "social_media_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "*"
tokio = { version = "*", features = ["full"] }
tower = "*"
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uuid = { version = "*", features = ["v4",  "serde"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
dotenvy = "*"
anyhow = "1.0.100"
